--- a/assets/style.css
+++ b/assets/style.css
@@ -134,6 +134,9 @@ body{
     /* background:darkgray; */
 }
 /* *** menu button on all pages *** */
+.flex-box-menu{
+  margin-bottom: 1rem;
+}
 .menu{
   /* background-image: linear-gradient(-145deg,rgb(230, 204, 153, .7 ),  rgb(53, 99, 104, .7), rgba(50, 82, 105, .7)); */
     font-family: 'BenchNine', sans-serif;
